--- a/site/index.html
+++ b/site/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Drawing with JSs</title>
+    <title>Drawing with JS</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/system.js"></script>
+    <script src="js/react.js"></script>
+    <script src="js/react-dom.js"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script src="js/app.js"></script>
     <script src="js/scripts.js"></script>
+    <script>
+      System.import("main");
+    </script>
   </body>
 </html>
